# router/router.go
@@ -33,6 +33,6 @@ func init() {
 		group.ALL("/link/edit/{id}",api.Link.Edit)
 		group.ALL("/link/delete/{id}",api.Link.Delete)
 		group.ALL("/file/put/{target}",api.File.Put)
-		group.ALL("file/delete/{fileName}",api.File.Delete)
+		group.ALL("file/delete/{target}/{fileName}",api.File.Delete)
 	})
 }
